[package]
name = "tokio-inotify"
version = "0.2.1"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
license = "MIT"
keywords = ["inotify", "tokio", "async", "filesystem"]
description = "Stream-based access to filesystem events."
repository = "https://github.com/dermesser/tokio-inotify"
documentation = "http://dermesser.github.io/tokio-inotify/doc/tokio_inotify/"

[dependencies]
futures = "0.1.1"
tokio-core = "0.1.0"
mio = "0.6.0"
inotify = "0.2.3"

